--- a/.github/workflows/AngularBuild.yml
+++ b/.github/workflows/AngularBuild.yml
@@ -2,13 +2,11 @@ name: mepple geo App workflow
 on:
     workflow_dispatch:
     push:
-        branches:
-            - main
         tags:
-            - ci
+            - v**
 jobs:
     deploy:
-        runs-on: ubuntu-18.04
+        runs-on: ubuntu-latest
         steps:
             - name: get code
               uses: actions/checkout@v3
