--- a/.github/workflows/AngularBuild.yml
+++ b/.github/workflows/AngularBuild.yml
@@ -14,7 +14,11 @@ jobs:
               run: npm ci
             - name: build angular
               run: npm run ng build
-
+            - name: upload artifact
+              uses: actions/upload-artifact@v3
+              with:
+                name: dist
+                path: ./dist/geo-app-test 
 
             
 
