--- a/.github/workflows/AngularBuild.yml
+++ b/.github/workflows/AngularBuild.yml
@@ -4,6 +4,13 @@ on:
     push:
         tags:
             - v**
+
+permissions:
+    contents: read
+    pages: write
+    id-token: write
+
+
 jobs:
     deploy:
         runs-on: ubuntu-latest
@@ -19,6 +26,10 @@ jobs:
               with:
                 name: dist
                 path: ./dist/geo-app-test 
+
+
+
+
 
             
 
