--- a/.github/workflows/AngularBuild.yml
+++ b/.github/workflows/AngularBuild.yml
@@ -10,6 +10,11 @@ permissions:
     pages: write
     id-token: write
 
+# Allow only one concurrent deployment, skipping runs queued between the run in-progress and latest queued.
+# However, do   cancel in-progress runs  
+concurrency:
+    group: "pages"
+    cancel-in-progress: true
 
 jobs:
     deploy:
@@ -25,7 +30,18 @@ jobs:
               uses: actions/upload-artifact@v3
               with:
                 name: dist
-                path: ./dist/geo-app-test 
+                path: ./dist/geo-app-test/ 
+
+
+            - name: Setup Pages
+              uses: actions/configure-pages@v3
+            - name: Upload artifact
+              uses: actions/upload-pages-artifact@v1
+              with:
+                path: './dist/geo-app-test/'
+            - name: Deploy to GitHub Pages
+              id: deployment
+              uses: actions/deploy-pages@v2
 
 
 
