--- a/angular.json
+++ b/angular.json
@@ -31,10 +31,9 @@
               "src/assets",
               {
                 "glob": "**/*",
-                "input":  "./node_modules/leaflet/dist/images",
+                "input": "./node_modules/leaflet/dist/images",
                 "output": "/"
               }
-              
             ],
             "styles": [
               "src/styles.scss",
@@ -42,8 +41,7 @@
               "src/static-files/MarkerCluster.css",
               "src/custom-theme.scss"
             ],
-            "scripts": [
-            ]
+            "scripts": []
           },
           "configurations": {
             "production": {
@@ -66,6 +64,14 @@
                 }
               ],
               "outputHashing": "all"
+            },
+            "gitpages": {
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.gitpages.ts"
+                }
+              ]
             },
             "development": {
               "buildOptimizer": false,
@@ -106,7 +112,7 @@
             "inlineStyleLanguage": "scss",
             "assets": [
               "src/favicon.ico",
-              "src/assets" 
+              "src/assets"
             ],
             "styles": [
               "src/styles.scss",
